--- a/wasm_assets/index.html
+++ b/wasm_assets/index.html
@@ -7,16 +7,33 @@
         padding: 0;
         background-color: rgb(0, 0, 0);
         height: 100%;
-        width: 100%;
+        width: 100%; 
+        display: flex;
+        justify-content: center;
+        align-items: center;
       }
       #rogalik-canvas {
-        width: 100%;
-        height: 100%;
+        display: block;
+        width: 960px;
+        height: 540px;
+        transform: scale(var(--scale-factor));
+        transform-origin: center;
+        image-rendering: crisp-edges;
       }
     </style>
     <script type="module">
       import init from './game.js'
       init()
+
+      function updateScaleFactor() {
+        // let scaleFactor = Math.min(1.0, Math.floor(window.innerWidth / 960.0));
+        let scaleFactor = window.innerWidth / 960.0;
+        console.log(window.innerWidth, scaleFactor);
+        document.documentElement.style.setProperty("--scale-factor", scaleFactor);
+      }
+
+      window.addEventListener("resize", updateScaleFactor);
+      updateScaleFactor();
     </script>
   </head>
   <body>
