--- a/wasm_assets/index.html
+++ b/wasm_assets/index.html
@@ -14,6 +14,8 @@
       }
       #rogalik-canvas {
         display: block;
+        width: 100%;
+        height: 100%;
         transform: scale(var(--scale-factor));
         transform-origin: center;
         image-rendering: crisp-edges;
@@ -26,22 +28,25 @@
         let targetW = window.innerWidth;
         let targetH = window.innerHeight;
         let ratio = targetW / targetH;
+        let dpi = window.devicePixelRatio;
+
+        let maxW = 1920.0 / dpi;
 
         let canvasW = targetW;
         let canvasH = targetH; 
 
-        // Render at max 1920px
-        if (canvasW > 1920) {
-          canvasW = 1920;
+        if (canvasW > maxW) {
+          canvasW = maxW;
           canvasH = canvasW / ratio;
         }
 
-        const canvas = document.getElementById("rogalik-canvas");
-        canvas.width = canvasW;
-        canvas.height = canvasH;
+        const container = document.getElementById("container");
+        container.style.width = `${canvasW}px`;
+        container.style.height = `${canvasH}px`;
 
         let scaleFactor = targetW / canvasW;
-        console.log("Target width:", window.innerWidth, "Scale factor:", scaleFactor);
+        console.log("Target width:", window.innerWidth, "Scale factor:", scaleFactor, "dpi:", dpi);
+        console.log("Max width:", maxW, "Canvas width:", canvasW);
         document.documentElement.style.setProperty("--scale-factor", scaleFactor);
       }
 
@@ -52,6 +57,8 @@
     </script>
   </head>
   <body>
-    <canvas id="rogalik-canvas" width="100" height="100"></canvas>
+    <div id="container">
+      <canvas id="rogalik-canvas" width="100" height="100"></canvas>
+    </div>
   </body>
 </html>
